2001-11-01  Seth Nickell  <snickell@stanford.edu>

	* Makefile.am:

	Add check-mime.pl to EXTRA_DIST.
	
2001-11-01  Seth Nickell  <snickell@stanford.edu>

	* configure.in:

	Change version number so people aren't confused...this should
	end up working with GNOME1.

2001-11-01  Seth Nickell  <snickell@stanford.edu>

	* autogen.sh:

	Give up and use GNOME2 macros...it works with GnomeVFS2
	now which is the most important part for now.

2001-11-01  Seth Nickell  <snickell@stanford.edu>

	* .cvsignore:

	Add a cvs ignore file.

=Initial checkin to a seperate module.=

2001-10-24  Seth Nickell  <snickell@stanford.edu>

	* gnome-vfs-mime-magic:

	Remove really questionable mime magic for detecting C/C++ files
	based on comment characters. This incorrectly detected Java files,
	and I don't know of an instance where a C/C++ file didn't
	have an extension, so mime magic really isn't useful here.
	
	* gnome-vfs.applications:
	* gnome-vfs.keys.in:

	Add x-dvi (already on the stable branch).
	
2001-10-24  Seth Nickell  <snickell@stanford.edu>

	* gnome-vfs.applications:
	* gnome-vfs.keys.in:
	* gnome-vfs.mime:

	Add C headers as a seperate type (helps out gIDE).

2001-10-02  Darin Adler  <darin@bentspoon.com>

	* Makefile.am: Changed from xml-i18n-tools to intltool.

2001-09-21  Havoc Pennington  <hp@redhat.com>

	* Makefile.am (sysconf_DATA): revert rename of
	gnome-vfs-mime-magic

	* gnome-vfs-mime-magic: add a comment about the desktop entry
	stuff being somewhat wrong

2001-09-18  Havoc Pennington  <hp@redhat.com>

	* Makefile.am (gnome-vfs2-mime-magic): rename gnome-vfs-mime-magic

2001-08-22  Dan Winship  <danw@ximian.com>

	* gnome-vfs.mime: Map .ics to text/calendar

	* gnome-vfs-mime-magic: Add BEGIN:VCALENDAR so icalendar objects
	aren't identified as text/plain

2001-08-06  Darin Adler  <darin@bentspoon.com>

	* gnome-vfs.applications: Corrected name of AbiWord executable.
	According to Dom and ALex Larsson, it's AbiWord, not abiword.
