@@ -1,3 +1,9 @@
+2001-11-02  Seth Nickell  <snickell@stanford.edu>
+
+	* gnome-vfs.keys.in:
+
+	Make Gnumeric the default application for Excel files.
+
 2001-11-01  Seth Nickell  <snickell@stanford.edu>
 
 	* Makefile.am:
